# jcode

./: ANALYSIS_custom_openai_compatible.md  Cargo.toml  HERDR_DETECTION_ANALYSIS.md  OAUTH.md  README.md  WORKFLOW_STATE.md
.github/scripts/: verify_windows_install.ps1
.github/workflows/: ci.yml
changelog/: index.json  v0.54.0.json  v0.54.1.json  v0.56.0.json
crates/jcode-app-core/: Cargo.toml
crates/jcode-app-core/src/: agent.rs  agent_tests.rs  external_auth.rs  lib.rs  notifications.rs  process_title.rs  prompt.rs  server.rs  session_rebuild.rs  update.rs
crates/jcode-base/: Cargo.toml
crates/jcode-base/src/: background.rs  browser.rs  config.rs  config_tests.rs  github.rs  lib.rs  memory_agent.rs  output_style.rs  power_inhibit.rs  process_title.rs  prompt.rs  prompt_tests.rs  skill.rs  subscription_catalog.rs  todo.rs
crates/jcode-config-types/src/: lib.rs
crates/jcode-core/: Cargo.toml
crates/jcode-core/src/: lib.rs  output_style.rs
crates/jcode-desktop/src/: animation.rs  desktop_benchmarks_run.rs  desktop_benchmarks_transcript.rs  desktop_issue_browser.rs  main.rs  main_tests.rs  session_launch.rs  single_session.rs  single_session_render.rs
crates/jcode-desktop2/: Cargo.toml
crates/jcode-desktop2/src/: capture.rs  harness.rs  main.rs  render.rs  states.rs  text.rs  theme.rs
crates/jcode-fuzzy/examples/: bench.rs  bench_realistic.rs
crates/jcode-fuzzy/src/: lib.rs
crates/jcode-harness-api/: Cargo.toml
crates/jcode-harness-api-server/: Cargo.toml
crates/jcode-harness-api-server/src/: lib.rs  translate.rs  translate_tests.rs
crates/jcode-harness-api/examples/: harness_repl.rs
crates/jcode-provider-cursor-acp-runtime/: Cargo.toml
crates/jcode-provider-cursor-acp-runtime/src/: lib.rs
crates/jcode-provider-doctor/: Cargo.toml
crates/jcode-setup-hints/: Cargo.toml
crates/jcode-setup-hints/src/: launch_hotkeys.rs  lib.rs  windows_hotkeys.rs  windows_setup.rs
crates/jcode-tui/: Cargo.toml
crates/jcode-tui-markdown/: Cargo.toml
crates/jcode-tui-style/: Cargo.toml
docs/: ATTRIBUTION_BENCHMARK.md  CURSOR_ACP.md  HARNESS_API_AND_DESKTOP_REWRITE.md  README.md  REFACTORING.md  TERMINAL_CAPABILITIES.md  WINDOWS.md  themes.md
docs/audits/: CODE_QUALITY_AUDIT_2026-04-18.md
docs/plans/: CLIENT_CORE_PRESENTATION_SPLIT_PLAN.md  MCP_SKILLS_PLAN.md
scripts/: attribution_benchmark_sponsors.json  benchmark_attribution.py  clean_target.sh  code_size_budget.json  desktop_reload_window_e2e.sh  install.ps1  install.sh  panic_budget.json  setup_friction_eval.sh  swallowed_error_budget.json  test_benchmark_attribution.py  test_install_conversion.sh  test_size_budget.json  test_windows_launcher_install.ps1  test_windows_setup_evaluation.ps1  uninstall.ps1  uninstall.sh
src/: lib.rs  live_tests.rs  main.rs  process_title.rs
src/cli/: args.rs  commands.rs  dispatch.rs  output.rs  proctitle.rs  provider_init.rs  provider_init_tests.rs  startup.rs  terminal.rs  tui_launch.rs
src/cli/args/: tests.rs
(+208 files in other folders)
