[package]
name = "jcode-core"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9.3"
libc = "0.2"
unicode-segmentation = "1"
unicode-properties = { version = "0.1", features = ["emoji"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Console",
    "Win32_System_Threading",
] }
